Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110131

QML Camera unloading crash on iOS

XMLWordPrintable

    • iOS/tvOS/watchOS
    • f4afbf6c5 (dev), 35f8f9c95 (6.4), 6fb6741cd (6.5), 037a6e0a0 (dev), 2489d143c (6.5), aadb05820 (dev), d7329f874 (6.8), 7756d875d (6.7)

      Hello, we found a crash on iOS (and iPadOS) during camera unloading in 6.4.2.

       

      Though it does not happen every time, I can see the crash regularly (~3 out of 5 times in the Release build).

      This is the crash we get:

      program received signal -111, thread:14fb2;name:QSGRenderThread;00:0000000000000000;01:a0f2202001000000;02:a0f2202001000000;03:b00b558202000000;04:0000000000000000;05:0000000000000000;06:3000000000000000;07:0000000000000000;08:4a00ad88faef3d64;09:a8f2202001000000;0a:0000000001000000;0b:804c010001000000;0c:0100000000000000;0d:0000000000000000;0e:0000601400000000;0f:107cfdf401000000;10:a0e11b8201000000;11:04f41a8201000000;12:0000000000000000;13:0000000000000000;14:e003558202000000;15:a0fc918002000000;16:c0f2202001000000;17:1e00102000000000;18:ac1a796c01000000;19:0000000000000000;1a:00c9b68202000000;1b:a0f2202001000000;1c:81aef04300000000;1d:8019796c01000000;1e:4854bd8b01000000;1f:7019796c01000000;20:f4e11b8201000000;21:00000060;metype:1;mecount:2;medata:1;medata:0;memory:0x16c791980=f019796c010000004854bd8b01000000;memory:0x16c7919f0=901a796c01000000e04fbd8b01000000;
      program received signal -111, thread:14fb2;name:QSGRenderThread;00:0000000000000000;01:a0f2202001000000;02:a0f2202001000000;03:b00b558202000000;04:0000000000000000;05:0000000000000000;06:3000000000000000;07:0000000000000000;08:4a00ad88faef3d64;09:a8f2202001000000;0a:0000000001000000;0b:804c010001000000;0c:0100000000000000;0d:0000000000000000;0e:0000601400000000;0f:107cfdf401000000;10:a0e11b8201000000;11:04f41a8201000000;12:0000000000000000;13:0000000000000000;14:e003558202000000;15:a0fc918002000000;16:c0f2202001000000;17:1e00102000000000;18:ac1a796c01000000;19:0000000000000000;1a:00c9b68202000000;1b:a0f2202001000000;1c:81aef04300000000;1d:8019796c01000000;1e:4854bd8b01000000;1f:7019796c01000000;20:f4e11b8201000000;21:00000060;metype:1;mecount:2;medata:1;medata:0;memory:0x16c791980=f019796c010000004854bd8b01000000;memory:0x16c7919f0=901a796c01000000e04fbd8b01000000;
      program received signal -111, thread:14fb2;name:QSGRenderThread;00:0000000000000000;01:a0f2202001000000;02:a0f2202001000000;03:b00b558202000000;04:0000000000000000;05:0000000000000000;06:3000000000000000;07:0000000000000000;08:4a00ad88faef3d64;09:a8f2202001000000;0a:0000000001000000;0b:804c010001000000;0c:0100000000000000;0d:0000000000000000;0e:0000601400000000;0f:107cfdf401000000;10:a0e11b8201000000;11:04f41a8201000000;12:0000000000000000;13:0000000000000000;14:e003558202000000;15:a0fc918002000000;16:c0f2202001000000;17:1e00102000000000;18:ac1a796c01000000;19:0000000000000000;1a:00c9b68202000000;1b:a0f2202001000000;1c:81aef04300000000;1d:8019796c01000000;1e:4854bd8b01000000;1f:7019796c01000000;20:f4e11b8201000000;21:00000060;metype:1;mecount:2;medata:1;medata:0;memory:0x16c791980=f019796c010000004854bd8b01000000;memory:0x16c7919f0=901a796c01000000e04fbd8b01000000; 
      ... and 3 more times this same message 

      Sometimes the log includes also this line (in the end):

      hit maximum number of consecutive signals, stopping

      The example code to reproduce it is uploaded. Basically, just instantiate the camera and destroy it.

        1. ios-camera-crash.qml
          1 kB
          Tomas Mizera
        2. main.qml
          1 kB
          Norman Dubert
        For Gerrit Dashboard: QTBUG-110131
        # Subject Branch Project Status CR V

            dorisverria Doris Verria
            tomasmizera Tomas Mizera
            Votes:
            4 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: