src/plugins/multimedia/darwin/avfvideosink.mm
@@ -100,6 +100,7 @@ void AVFVideoSinkInterface::setVideoSink(AVFVideoSink *sink)
 
 void AVFVideoSinkInterface::setRhi(QRhi *rhi)
 {
+    QMutexLocker locker(&m_textureCacheMutex);
     if (m_rhi == rhi)
         return;
     freeTextureCaches();
