src/plugins/multimedia/darwin/avfvideosink_p.h
@@ -15,6 +15,7 @@
 // We mean it.
 //
 
+#include <QtCore/QMutex>
 #include "private/qplatformvideosink_p.h"
 
 Q_FORWARD_DECLARE_OBJC_CLASS(CALayer);
@@ -66,6 +67,8 @@ public:
     virtual void setLayer(CALayer *layer);
     virtual void setOutputSettings(NSDictionary *settings);
 
+    QMutex *textureCacheMutex() { return &m_textureCacheMutex; }
+
     QRhi *rhi() const { return m_rhi; }
 
     void updateLayerBounds();
@@ -87,6 +90,7 @@ protected:
     QRhi *m_rhi = nullptr;
     CALayer *m_layer = nullptr;
     NSDictionary *m_outputSettings = nullptr;
+    QMutex m_textureCacheMutex;
 };
 
 
